# trello

./: .gitignore  README.md  conf.ini  pyproject.toml  test_config.ini
api/: BoardApi.py
configuration/: ConfigProvider.py
pages/: AuthPage.py  MainPage.py
scheme/: create_board_scheme.json
testdata/: DataProvider.py
tests/: conftest.py  test_auth.py
tests/api/: test_api_board.py  test_api_card.py
tests/ui/: test_auth.py  test_board.py
utils/: logger.py  resource.py  validator_json.py
